// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`export-default.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export default (1,
2);

=====================================output=====================================
export default (1, 2);

================================================================================
`;

exports[`expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(a, b);

a, b

=====================================output=====================================
(a, b);

(a, b);

================================================================================
`;

exports[`ignore.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
+
  // prettier-ignore
  (
    (
      first
    )
    ,
    (
      last
    )
  )
;

=====================================output=====================================
+(
  // prettier-ignore
  ((
      first
    )
    ,
    (
      last
    ))
);

================================================================================
`;

exports[`ignored.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const a = ()=>()=>
// prettier-ignore
(a,b)

=====================================output=====================================
const a = () => () =>
  // prettier-ignore
  (a,b);

================================================================================
`;

exports[`parenthesized.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
console.log(
  /* 1 */
  (
    /* 2 */
    (
      /* 3 */
      first
      /* 4 */
    )
    /* 5 */
    ,
    /* 6 */
    (
      /* 7 */
      last
      /* 8 */
    )
    /* 9 */
  )
  /* 10 */
);

=====================================output=====================================
console.log(
  /* 1 */
  /* 2 */
  (/* 3 */
  first,
  /* 4 */
  /* 5 */
  /* 6 */
  /* 7 */
  last),
  /* 8 */
  /* 9 */
  /* 10 */
);

================================================================================
`;

exports[`parenthesized-trailing-comment.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const x1 = (a, b, c /* comment */);
const x12 = (a, b, c) /* comment */;
const x2 = (a = c /* comment */);
const x22 = (a = c) /* comment */;

(a, b, c /* comment */);
(a, b, c) /* comment */;
(a, b, c /* comment */
);
(a, b, c
/* comment */
);
(a = c /* comment */);
(a = c) /* comment */;
(a = c /* comment */
);
(a = c
/* comment */
);
({a} = c /* comment */);
({a} = c
/* comment */
);
({a} = c /* comment */
);

(foo() /* comment */);
(foo()) /* comment */;
(foo()
/* comment */
);
(foo() /* comment */
);

assigned = (a, b, c /* comment */);
assigned = (a, b, c) /* comment */;
// assigned = (a = c /* comment */);

function f() {
  return (a, b, c /* comment */);
  return (a, b, c) /* comment */;
  return (a = c /* comment */);
}

=====================================output=====================================
const x1 = (a, b, c /* comment */);
const x12 = (a, b, c); /* comment */
const x2 = (a = c /* comment */);
const x22 = (a = c); /* comment */

(a, b, c); /* comment */
(a, b, c); /* comment */
(a, b, c); /* comment */
(a, b, c);
/* comment */
a = c; /* comment */
a = c; /* comment */
a = c; /* comment */
a = c;
/* comment */
({ a } = c); /* comment */
({ a } = c);
/* comment */
({ a } = c); /* comment */

foo(); /* comment */
foo(); /* comment */
foo();
/* comment */
foo(); /* comment */

assigned = (a, b, c /* comment */);
assigned = (a, b, c); /* comment */
// assigned = (a = c /* comment */);

function f() {
  return (a, b, c /* comment */);
  return (a, b, c); /* comment */
  return (a = c /* comment */);
}

================================================================================
`;

exports[`parenthesized-trailing-comment-unstable.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// TODO: Enable tests in parenthesized-trailing-comment.js when they are stable

assigned = (a = c /* comment */);

=====================================output=====================================
// TODO: Enable tests in parenthesized-trailing-comment.js when they are stable

assigned = a = c /* comment */;

================================================================================
`;

exports[`return.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function a() {
  return (a, b);
  return a, b;
}

=====================================output=====================================
function a() {
  return (a, b);
  return (a, b);
}

================================================================================
`;
